		'-rf_size' and 'rf_kind'.
	* processor.c: pipeline statistics for McPAT.
	* cachesystem.c: statistics for McPAT.

2010-06-16
	* phregs.c: function 'phregs_can_rename' substituted by 'phregs_count_deps'.
		This function is called when the uop is created, and stores the
		number of required logical/physical ideps/odeps.
	* cachesystem.c: TLB split into Data-TLB and Inst-TLB for compatibility with
		McPAT.
	* processor.c: call to 'uopq_reg_options()' was missing.

2010-06-16
	Version 2.3.2 Released

2010-06-18
	* elf.c: warnings produced by 'sizeof' removed.

2010-06-23
	* m2skernel: multi-byte nops implemented. Instruction 'cpuid' with eax=2.
		PrefetchXX instructions implemented. (All reported by Multi2Sim user).

2010-07-21
	* m2skernel, sched.c: context scheduler implemented. New fields:
		ke->context_reschedule
		ctx->alloc_when, ctx->dealloc_when
		ctx->alloc_core, ctx->alloc_thread
		ctx->dealloc_signal
		p->ctx_alloc_oldest
		p->ctx_dealloc_signals

2010-07-21
	Version 2.3.3 Released

2010-07-23
	* libdisasm/machine.dat: Bug fixed in instruction bt_rm32_r32. The 4th field
		'SKIP' has been replaced by 'REG'. The Intel manual used as a reference
		had an error in the instruction format specification.
	* m2s-objdump.c: Bug fixed after 'if' statement.


2010-07-26
	* syscall.c: system calls 'sched_getparam' and 'sched_setparam' implemented.
	* syscall.c: system call 'clock_getres' implemented.
	* syscall.c: system calls 'sched_get_priority_min' and 'sched_get_priority_max'
		implemented.
	* Makefile.am: flags '-Werror' removed in all Makefiles.

2010-07-27
	* disasm.c: qualifier 'volatile' added to 'inst' parameter to avoid
		compiler optimizations in 'memset' call.

2010-09-26
	* libm2skernel/memory.c: mem_page_t structure changed to provide a pointer to
		the page data instead of attaching it to the structure. By doing this,
		a benchmark can allocate large amounts of memory without causing
		hyper-paging if the allocated memory pages are not accessed.
